--- a/app/index.pug
+++ b/app/index.pug
@@ -32,37 +32,38 @@ block content
 	main.main
 		.sidebar
 			include pug/layouts/sidebar
-		.rows.worker-rows
-			include pug/layouts/row
-			include pug/layouts/row
-			include pug/layouts/row
-			include pug/layouts/row
-			include pug/layouts/row
-			include pug/layouts/row
-			include pug/layouts/row
-			include pug/layouts/row
-			include pug/layouts/row
-			include pug/layouts/row
-			include pug/layouts/row
-			include pug/layouts/row
-			include pug/layouts/row
-			include pug/layouts/row
-			include pug/layouts/row
-			include pug/layouts/row
-			include pug/layouts/row
-			include pug/layouts/row
-			include pug/layouts/row
-			include pug/layouts/row
-			include pug/layouts/row
-			include pug/layouts/row
-			include pug/layouts/row
-			include pug/layouts/row
-			include pug/layouts/row
-			include pug/layouts/row
-			include pug/layouts/row
-			include pug/layouts/row
-			include pug/layouts/row
-			include pug/layouts/row
+		.rows-wrapper
+			.rows.worker-rows
+				include pug/layouts/row
+				include pug/layouts/row
+				include pug/layouts/row
+				include pug/layouts/row
+				include pug/layouts/row
+				include pug/layouts/row
+				include pug/layouts/row
+				include pug/layouts/row
+				include pug/layouts/row
+				include pug/layouts/row
+				include pug/layouts/row
+				include pug/layouts/row
+				include pug/layouts/row
+				include pug/layouts/row
+				include pug/layouts/row
+				include pug/layouts/row
+				include pug/layouts/row
+				include pug/layouts/row
+				include pug/layouts/row
+				include pug/layouts/row
+				include pug/layouts/row
+				include pug/layouts/row
+				include pug/layouts/row
+				include pug/layouts/row
+				include pug/layouts/row
+				include pug/layouts/row
+				include pug/layouts/row
+				include pug/layouts/row
+				include pug/layouts/row
+				include pug/layouts/row
 	include pug/layouts/_popup
 			//- include pug/layouts/header
 			//- include pug/layouts/footer
