--- a/app/vacancy.pug
+++ b/app/vacancy.pug
@@ -33,24 +33,25 @@ block content
 		
 		.sidebar.vacancy-sidebar
 			include pug/layouts/vacancy/sidebar
-		.rows.vacancy-rows
-			.grid
-				//- .side-column
-				.columns
-					.grid-column.first-column
-					.grid-column.second-column
-					.grid-column.third-column
-					.grid-column.fourth-column
-					.grid-column.fifth-column
-			include pug/layouts/vacancy/row
-			include pug/layouts/vacancy/row
-			include pug/layouts/vacancy/row
-			include pug/layouts/vacancy/row
-			include pug/layouts/vacancy/row
-			include pug/layouts/vacancy/row
-			include pug/layouts/vacancy/row
-			include pug/layouts/vacancy/archive-row
-	//- include pug/layouts/vacancy/_popup
+		.rows-wrapper
+			.rows.vacancy-rows
+				.grid
+					//- .side-column
+					.columns
+						.grid-column.first-column
+						.grid-column.second-column
+						.grid-column.third-column
+						.grid-column.fourth-column
+						.grid-column.fifth-column
+				include pug/layouts/vacancy/row
+				include pug/layouts/vacancy/row
+				include pug/layouts/vacancy/row
+				include pug/layouts/vacancy/row
+				include pug/layouts/vacancy/row
+				include pug/layouts/vacancy/row
+				include pug/layouts/vacancy/row
+				include pug/layouts/vacancy/archive-row
+		//- include pug/layouts/vacancy/_popup
 	include pug/layouts/vacancy/_popup
 			//- include pug/layouts/header
 			//- include pug/layouts/footer
