--- a/app/less/_row.less
+++ b/app/less/_row.less
@@ -107,7 +107,9 @@
 
 .row__labels {
 	flex-basis: 397/1720 * 100%;
-	overflow: visible;
+	overflow: hidden;
+	padding: 0;
+	margin: 13px;
 	// border-right: 1px solid @main-color;
 }
 
