--- a/app/less/_sidebar.less
+++ b/app/less/_sidebar.less
@@ -3,6 +3,7 @@
 	position: fixed;
 	width: 200px;
 	user-select: none;
+	font-size: 13/14 * 1rem;
 
 	
 	
@@ -239,22 +240,22 @@
 		
 	}
 
-	&.active[aria-expanded="false"] {
-			background: @hover_main-color;
-			color: @hover_color;
-			// background:@secondary;
-			// color: @main-color;
-			// font-weight: 500;
+	// &.active[aria-expanded="false"] {
+	// 		background: @hover_main-color;
+	// 		color: @hover_color;
+	// 		// background:@secondary;
+	// 		// color: @main-color;
+	// 		// font-weight: 500;
 
-			// span {
-			// 	&:before, &:after {
-			// 		background: @main-color;
-			// 	}
-			// }
+	// 		// span {
+	// 		// 	&:before, &:after {
+	// 		// 		background: @main-color;
+	// 		// 	}
+	// 		// }
 		
 
 		
-	}
+	// }
 
 	// &[aria-expanded="true"] {
 
