--- a/app/pug/layouts/vacancy/_popup.pug
+++ b/app/pug/layouts/vacancy/_popup.pug
@@ -69,16 +69,16 @@
 		#selecting-popup.sidebar-popup
 			form
 				.input-group
-					input(type="checkbox" id="date-start-chbx")
-					label(for="date-start-chbx")
+					input(type="radio" id="date-start-rbtn" name="selecting-rbtn")
+					label(for="date-start-rbtn")
 						|По дате начала работы
 				.input-group
-					input(type="checkbox" id='countries-chbx')
-					label(for="countries-chbx")
+					input(type="radio" id='countries-rbtn' name="selecting-rbtn")
+					label(for="countries-rbtn")
 						|По странам
 				.input-group
-					input(type="checkbox" id='managers-chbx')
-					label(for="managers-chbx")
+					input(type="radio" id='managers-rbtn' name="selecting-rbtn")
+					label(for="managers-rbtn")
 						|По менеджерам
 		#type-work-popup.sidebar-popup
 			form
