--- a/app/pug/layouts/vacancy/row.pug
+++ b/app/pug/layouts/vacancy/row.pug
@@ -90,6 +90,7 @@
 						p
 							|Цветы
 					.table-full__cell.row__cell.cell-notes
+						input(type="text")
 			.table-full__row.f-container(data-count="2")
 				.table-full__cell.row__cell.cell-names
 					p
@@ -132,6 +133,7 @@
 					p
 						|Поля
 				.table-full__cell.row__cell.cell-notes
+					input(type="text")
 			.table-full__row.f-container(data-count="2")
 				.table-full__cell.row__cell.cell-names
 					p
@@ -173,6 +175,7 @@
 							|AC
 				.table-full__cell.row__cell.cell-exp
 				.table-full__cell.row__cell.cell-notes
+					input(type="text")
 			.table-full__row.f-container(data-count="2")
 				.table-full__cell.row__cell.cell-names
 					p
@@ -217,6 +220,7 @@
 					p
 						|Коровы
 				.table-full__cell.row__cell.cell-notes
+					input(type="text")
 			.table-full__row.f-container(data-count="2")
 				.table-full__cell.row__cell.cell-names
 					p
@@ -264,6 +268,7 @@
 						span
 							|ВСТ
 				.table-full__cell.row__cell.cell-notes
+					input(type="text")
 		.table-full__ready.ready
 			.table-full__row
 				p.table-full__title
@@ -306,8 +311,7 @@
 						.cell-status__right
 					.table-full__cell.row__cell.cell-exp
 					.table-full__cell.row__cell.cell-notes
-						p
-							|Записан в посольство на 10.05
+						input(type="text" value="Записан в посольство на 10.05")
 			.table-full__row.f-container(data-count="1")
 				.table-full__cell.row__cell.cell-names
 					p
@@ -348,6 +352,7 @@
 					p
 						|Поля
 				.table-full__cell.row__cell.cell-notes
+					input(type="text")
 		.table-full__wait.wait
 			.table-full__row
 				p.table-full__title
@@ -390,6 +395,7 @@
 					.cell-status__right
 				.table-full__cell.row__cell.cell-exp
 				.table-full__cell.row__cell.cell-notes
+					input(type="text")
 			.table-full__row.f-container(data-count="1")
 				.table-full__cell.row__cell.cell-names
 					p
@@ -425,6 +431,7 @@
 					.cell-status__right
 				.table-full__cell.row__cell.cell-exp
 				.table-full__cell.row__cell.cell-notes
+					input(type="text")
 			.table-full__row.f-container(data-count="1")
 				.table-full__cell.row__cell.cell-names
 					p
@@ -460,6 +467,7 @@
 					.cell-status__right
 				.table-full__cell.row__cell.cell-exp
 				.table-full__cell.row__cell.cell-notes
+					input(type="text")
 		.table-full__department.department
 			.table-full__row
 				p.table-full__title
@@ -502,6 +510,7 @@
 					.cell-status__right
 				.table-full__cell.row__cell.cell-exp
 				.table-full__cell.row__cell.cell-notes
+					input(type="text")
 		.table-full__busy.busy
 			.table-full__row
 				p.table-full__title
@@ -544,6 +553,7 @@
 					.cell-status__right
 				.table-full__cell.row__cell.cell-exp
 				.table-full__cell.row__cell.cell-notes
+					input(type="text")
 .row.no-open
 	.f-container
 		.row__terms.row__cell.medium
