--- a/app/less/vacancy/_clients.less
+++ b/app/less/vacancy/_clients.less
@@ -1,6 +1,7 @@
 .clients .modal-row__layer {
 	position: relative;
 	overflow-y: auto;
+	height: 100%;
 	.table-full {
 		// display: block;
 		max-width: 100%;
@@ -93,11 +94,11 @@
 
 .modal-row__clients-row {
 
-	transition: 0.2s opacity 0.3s linear;
+	transition: 0.2s opacity 0.3s linear, 0.2s height 0.3s linear;
 	&:not(.active) {
 		opacity: 0;
 		visibility: hidden;
-		transition: 0.2s opacity 0.3s linear;
+		transition: 0.2s opacity 0.3s linear, 0.2s height 0.3s linear;
 		height: 0;
 
 	}
@@ -114,3 +115,10 @@
 		padding: 0;
 	}
 }
+
+
+// .os-host-overflow-x {
+// 	.os-content-glue {
+// 		transition: height 0.2s;
+// 	}
+// }
