--- a/app/pug/layouts/vacancy/vacancy-popup/_vacancy-popup.pug
+++ b/app/pug/layouts/vacancy/vacancy-popup/_vacancy-popup.pug
@@ -1,6 +1,6 @@
 #modal-2.modal.micromodal-slide(aria-hidden='true')
-	.modal__overlay(tabindex='-1' data-custom-close="modal-2")
-		.modal__wrapper.my-modal-wrapper(data-custom-close="modal-2")
+	.modal__overlay(tabindex='-1')
+		.modal__wrapper.my-modal-wrapper
 			.modal__container.work-modal.my-modal(role='dialog' aria-modal='true' aria-labelledby='modal-2-title')
 				span.modal__close(data-custom-close="modal-1")
 					span
