--- a/app/less/_row.less
+++ b/app/less/_row.less
@@ -29,7 +29,10 @@
 
 .row__cell {
 	height: 100%;
-	padding: 13px;
+	padding-top: 13px;
+	padding-bottom: 13px;
+	margin-right: 13px;
+	margin-left: 13px;
 	width: 100%;
 	letter-spacing: -0.05px;
 	display: flex;
@@ -52,12 +55,15 @@
 	flex-basis: 81/1720 * 100%;
 	border-right: 1px solid @main-color;
 	min-width: 80px;
-
+	margin: 0;
+	padding: 13px;
 }
 
 .row__company {
 	flex-basis: 268/1720 * 100%;
 	border-right: 1px solid @main-color;
+	margin: 0;
+	padding: 13px;
 }
 
 .row__name {
@@ -66,6 +72,8 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	margin: 0;
+	padding: 13px;
 
 	.row__tags {
 		overflow: visible;
@@ -80,6 +88,8 @@
 	flex-basis: 148/1720 * 100%;
 	border-right: 1px solid @main-color;
 	min-width: 147px;
+	margin: 0;
+	padding: 13px;
 	i {
 		width: 16px;
 		height: 16px;
@@ -96,12 +106,16 @@
 .row__address {
 	flex-basis: 310/1720 * 100%;
 	border-right: 1px solid @main-color;
+	margin: 0;
+	padding: 13px;
 }
 
 
 .row__jobs {
 	flex-basis: 268/1720 * 100%;
 	border-right: 1px solid @main-color;
+	margin: 0;
+	padding: 13px;
 }
 
 
@@ -110,6 +124,8 @@
 	overflow: hidden;
 	padding: 0;
 	margin: 13px;
+	margin-top: 0;
+	margin-bottom: 0;
 	// border-right: 1px solid @main-color;
 }
 
