--- a/app/pug/layouts/vacancy/archive-row.pug
+++ b/app/pug/layouts/vacancy/archive-row.pug
@@ -2,13 +2,14 @@
 	.f-container
 		.row__terms.row__cell.hot
 		.row__labels-2.row__cell.no-open
-			i.label.attention__label.no-open(data-custom-open="modal-2")
-				span.no-open
-					|NO
-				span.no-open
-					|118 - 22
-			span.number-of-people.attention-number.no-open(data-custom-open="modal-2")
-					|М12 Ж5
+			.row__labels-2-layer.no-open
+				i.label.attention__label.no-open(data-custom-open="modal-2")
+					span.no-open
+						|NO
+					span.no-open
+						|118 - 22
+				span.number-of-people.attention-number.no-open(data-custom-open="modal-2")
+						|М12 Ж5
 		.row__archive.row__cell
 			p
 				|Архив - 28.10.2019
@@ -33,7 +34,7 @@
 					|Отобраны
 			.table-full__row.f-container(data-count="2")
 					.table-full__cell.row__cell.cell-names
-						p
+						a(href="#")
 							|Гурківський Олександр
 						span.row__indicator.department.indicator 
 							span
@@ -81,9 +82,10 @@
 						p
 							|Цветы
 					.table-full__cell.row__cell.cell-notes
+						input(type="text")
 			.table-full__row.f-container(data-count="2")
 				.table-full__cell.row__cell.cell-names
-					p
+					a(href="#")
 						|Лемешко Аліна
 				.table-full__cell.row__cell.cell-status
 					.cell-status__left
@@ -122,9 +124,10 @@
 					p
 						|Поля
 				.table-full__cell.row__cell.cell-notes
+					input(type="text")
 			.table-full__row.f-container(data-count="2")
 				.table-full__cell.row__cell.cell-names
-					p
+					a(href="#")
 						|Романов Валентин
 				.table-full__cell.row__cell.cell-status
 					.cell-status__left
@@ -163,9 +166,10 @@
 							|AC
 				.table-full__cell.row__cell.cell-exp
 				.table-full__cell.row__cell.cell-notes
+					input(type="text")
 			.table-full__row.f-container(data-count="2")
 				.table-full__cell.row__cell.cell-names
-					p
+					a(href="#")
 						|Тарасюк Віталій
 				.table-full__cell.row__cell.cell-status
 					.cell-status__left
@@ -206,9 +210,10 @@
 					p
 						|Коровы
 				.table-full__cell.row__cell.cell-notes
+					input(type="text")
 			.table-full__row.f-container(data-count="2")
 				.table-full__cell.row__cell.cell-names
-					p
+					a(href="#")
 						|Бичківська Алла
 				.table-full__cell.row__cell.cell-status
 					.cell-status__left
@@ -249,13 +254,14 @@
 					i.label.dirty-green__label
 						|ВСТ
 				.table-full__cell.row__cell.cell-notes
+					input(type="text")
 		.table-full__ready.ready
 			.table-full__row
 				p.table-full__title
 					|Готовятся к подаче
 			.table-full__row.f-container(data-count="1")
 					.table-full__cell.row__cell.cell-names
-						p
+						a(href="#")
 							|Червінський Йосип
 					.table-full__cell.row__cell.cell-status
 						.cell-status__left
@@ -288,11 +294,10 @@
 						.cell-status__right
 					.table-full__cell.row__cell.cell-exp
 					.table-full__cell.row__cell.cell-notes
-						p
-							|Записан в посольство на 10.05
+						input(type="text" value="Записан в посольство на 10.05")
 			.table-full__row.f-container(data-count="1")
 				.table-full__cell.row__cell.cell-names
-					p
+					a(href="#")
 						|Шащук Іван
 				.table-full__cell.row__cell.cell-status
 						.cell-status__left
@@ -329,13 +334,14 @@
 					p
 						|Поля
 				.table-full__cell.row__cell.cell-notes
+					input(type="text")
 		.table-full__wait.wait
 			.table-full__row
 				p.table-full__title
 					|Ждут разрешения
 			.table-full__row.f-container(data-count="1")
 				.table-full__cell.row__cell.cell-names
-					p
+					a(href="#")
 						|Іванчик Олександр
 				.table-full__cell.row__cell.cell-status
 					.cell-status__left
@@ -368,9 +374,10 @@
 					.cell-status__right
 				.table-full__cell.row__cell.cell-exp
 				.table-full__cell.row__cell.cell-notes
+					input(type="text")
 			.table-full__row.f-container(data-count="1")
 				.table-full__cell.row__cell.cell-names
-					p
+					a(href="#")
 						|Волтарніст Юлія
 				.table-full__cell.row__cell.cell-status
 					.cell-status__left
@@ -403,9 +410,10 @@
 					.cell-status__right
 				.table-full__cell.row__cell.cell-exp
 				.table-full__cell.row__cell.cell-notes
+					input(type="text")
 			.table-full__row.f-container(data-count="1")
 				.table-full__cell.row__cell.cell-names
-					p
+					a(href="#")
 						|Ситнік Оксана
 				.table-full__cell.row__cell.cell-status
 					.cell-status__left
@@ -438,13 +446,14 @@
 					.cell-status__right
 				.table-full__cell.row__cell.cell-exp
 				.table-full__cell.row__cell.cell-notes
+					input(type="text")
 		.table-full__department.department
 			.table-full__row
 				p.table-full__title
 					|Готовятся к отъезду
 			.table-full__row.f-container(data-count="2")
 				.table-full__cell.row__cell.cell-names
-					p
+					a(href="#")
 						|Коргун Максим
 				.table-full__cell.row__cell.cell-status
 					.cell-status__left
@@ -477,13 +486,14 @@
 					.cell-status__right
 				.table-full__cell.row__cell.cell-exp
 				.table-full__cell.row__cell.cell-notes
+					input(type="text")
 		.table-full__busy.busy
 			.table-full__row
 				p.table-full__title
 					|Трудоустроены
 			.table-full__row.f-container(data-count="1")
 				.table-full__cell.row__cell.cell-names
-					p
+					a(href="#")
 						|Конончук Віталій
 				.table-full__cell.row__cell.cell-status
 					.cell-status__left
@@ -516,3 +526,4 @@
 					.cell-status__right
 				.table-full__cell.row__cell.cell-exp
 				.table-full__cell.row__cell.cell-notes
+					input(type="text")
