--- a/app/pug/layouts/vacancy/row.pug
+++ b/app/pug/layouts/vacancy/row.pug
@@ -2,13 +2,14 @@
 	.f-container
 		.row__terms.row__cell.hot
 		.row__labels-2.row__cell
-			i.label.attention__label.no-open(data-custom-open="modal-2")
-				span.no-open
-					|NO
-				span.no-open
-					|118 - 22
-			span.number-of-people.attention-number.no-open(data-custom-open="modal-2")
-					|М12 Ж5
+			.row__labels-2-layer.no-open
+				i.label.attention__label.no-open(data-custom-open="modal-2")
+					span.no-open
+						|NO
+					span.no-open
+						|118 - 22
+				span.number-of-people.attention-number.no-open(data-custom-open="modal-2")
+						|М12 Ж5
 		.row__indicators.row__cell
 			span.row__indicator.indicator.empty
 			span.row__indicator.indicator.empty
@@ -41,7 +42,7 @@
 				.table-full__placeholder.third
 			.table-full__row.f-container(data-count="2")
 					.table-full__cell.row__cell.cell-names
-						p
+						a(href="#")
 							|Гурківський Олександр
 						span.row__indicator.indicator.department
 							span
@@ -93,7 +94,7 @@
 						input(type="text")
 			.table-full__row.f-container(data-count="2")
 				.table-full__cell.row__cell.cell-names
-					p
+					a(href="#")
 						|Лемешко Аліна
 				.table-full__cell.row__cell.cell-status
 					.cell-status__left
@@ -136,7 +137,7 @@
 					input(type="text")
 			.table-full__row.f-container(data-count="2")
 				.table-full__cell.row__cell.cell-names
-					p
+					a(href="#")
 						|Романов Валентин
 				.table-full__cell.row__cell.cell-status
 					.cell-status__left
@@ -178,7 +179,7 @@
 					input(type="text")
 			.table-full__row.f-container(data-count="2")
 				.table-full__cell.row__cell.cell-names
-					p
+					a(href="#")
 						|Тарасюк Віталій
 				.table-full__cell.row__cell.cell-status
 					.cell-status__left
@@ -223,7 +224,7 @@
 					input(type="text")
 			.table-full__row.f-container(data-count="2")
 				.table-full__cell.row__cell.cell-names
-					p
+					a(href="#")
 						|Бичківська Алла
 				.table-full__cell.row__cell.cell-status
 					.cell-status__left
@@ -278,7 +279,7 @@
 				.table-full__placeholder.third
 			.table-full__row.f-container(data-count="1")
 					.table-full__cell.row__cell.cell-names
-						p
+						a(href="#")
 							|Червінський Йосип
 					.table-full__cell.row__cell.cell-status
 						.cell-status__left
@@ -314,7 +315,7 @@
 						input(type="text" value="Записан в посольство на 10.05")
 			.table-full__row.f-container(data-count="1")
 				.table-full__cell.row__cell.cell-names
-					p
+					a(href="#")
 						|Шащук Іван
 				.table-full__cell.row__cell.cell-status
 						.cell-status__left
@@ -362,7 +363,7 @@
 				.table-full__placeholder.third
 			.table-full__row.f-container(data-count="1")
 				.table-full__cell.row__cell.cell-names
-					p
+					a(href="#")
 						|Іванчик Олександр
 				.table-full__cell.row__cell.cell-status
 					.cell-status__left
@@ -398,7 +399,7 @@
 					input(type="text")
 			.table-full__row.f-container(data-count="1")
 				.table-full__cell.row__cell.cell-names
-					p
+					a(href="#")
 						|Волтарніст Юлія
 				.table-full__cell.row__cell.cell-status
 					.cell-status__left
@@ -434,7 +435,7 @@
 					input(type="text")
 			.table-full__row.f-container(data-count="1")
 				.table-full__cell.row__cell.cell-names
-					p
+					a(href="#")
 						|Ситнік Оксана
 				.table-full__cell.row__cell.cell-status
 					.cell-status__left
@@ -477,7 +478,7 @@
 				.table-full__placeholder.third
 			.table-full__row.f-container(data-count="2")
 				.table-full__cell.row__cell.cell-names
-					p
+					a(href="#")
 						|Коргун Максим
 				.table-full__cell.row__cell.cell-status
 					.cell-status__left
@@ -520,7 +521,7 @@
 				.table-full__placeholder.third
 			.table-full__row.f-container(data-count="1")
 				.table-full__cell.row__cell.cell-names
-					p
+					a(href="#")
 						|Конончук Віталій
 				.table-full__cell.row__cell.cell-status
 					.cell-status__left
@@ -558,11 +559,12 @@
 	.f-container
 		.row__terms.row__cell.medium
 		.row__labels-2.row__cell
-			i.label.attention__label.no-open(data-custom-open="modal-2")
-				span.no-open
-					|DE
-				span.no-open
-					|18 - 5
+			.row__labels-2-layer.no-open
+				i.label.attention__label.no-open(data-custom-open="modal-2")
+					span.no-open
+						|DE
+					span.no-open
+						|18 - 5
 		.row__indicators.row__cell
 			span.row__indicator.indicator.decline
 				span
