--- a/app/pug/layouts/vacancy/vacancy-popup/_clients.pug
+++ b/app/pug/layouts/vacancy/vacancy-popup/_clients.pug
@@ -22,10 +22,11 @@
 						.table-full__placeholder.third
 					.table-full__row.f-container(data-count="2")
 							.table-full__cell.row__cell.cell-names
-								p
+								a(href="#")
 									|Гурківський Олександр
 								span.row__indicator.indicator.department
-									|2
+									span
+										|2
 							.table-full__cell.row__cell.cell-status
 								.cell-status__left
 									.cell-status__slider
@@ -65,9 +66,10 @@
 										|AC
 							.table-full__cell.row__cell.cell-exp
 							.table-full__cell.row__cell.cell-notes
+								input(type="text")
 					.table-full__row.f-container(data-count="2")
 						.table-full__cell.row__cell.cell-names
-							p
+							a(href="#")
 								|Лемешко Аліна
 						.table-full__cell.row__cell.cell-status
 							.cell-status__left
@@ -102,9 +104,10 @@
 									|AC
 						.table-full__cell.row__cell.cell-exp
 						.table-full__cell.row__cell.cell-notes
+							input(type="text")
 					.table-full__row.f-container(data-count="2")
 						.table-full__cell.row__cell.cell-names
-							p
+							a(href="#")
 								|Романов Валентин
 						.table-full__cell.row__cell.cell-status
 							.cell-status__left
@@ -143,9 +146,10 @@
 									|AC
 						.table-full__cell.row__cell.cell-exp
 						.table-full__cell.row__cell.cell-notes
+							input(type="text")
 					.table-full__row.f-container(data-count="2")
 						.table-full__cell.row__cell.cell-names
-							p
+							a(href="#")
 								|Тарасюк Віталій
 						.table-full__cell.row__cell.cell-status
 							.cell-status__left
@@ -182,9 +186,10 @@
 									|AC
 						.table-full__cell.row__cell.cell-exp
 						.table-full__cell.row__cell.cell-notes
+							input(type="text")
 					.table-full__row.f-container(data-count="2")
 						.table-full__cell.row__cell.cell-names
-							p
+							a(href="#")
 								|Бичківська Алла
 						.table-full__cell.row__cell.cell-status
 							.cell-status__left
@@ -220,13 +225,14 @@
 						.table-full__cell.row__cell.cell-exp
 						
 							i.label.green__label
-								|Д2
+								|Д 2
 							
 							p
 								|Агроном
 							//- i.label.dirty-green__label
 							//- 	|ВСТ
 						.table-full__cell.row__cell.cell-notes
+							input(type="text")
 				.table-full__ready.ready
 					.table-full__row
 						p.table-full__title
@@ -236,7 +242,7 @@
 						.table-full__placeholder.third
 					.table-full__row.f-container(data-count="1")
 							.table-full__cell.row__cell.cell-names
-								p
+								a(href="#")
 									|Червінський Йосип
 							.table-full__cell.row__cell.cell-status
 								.cell-status__left
@@ -270,11 +276,10 @@
 							.table-full__cell.row__cell.cell-exp
 								+stars('EN', 3)
 							.table-full__cell.row__cell.cell-notes
-								p
-									|Записан в посольство на 10.05 Записан в посольство на 10.05
+								input(type="text" value="Записан в посольство на 10.05 Записан в посольство на 10.05")
 					.table-full__row.f-container(data-count="1")
 						.table-full__cell.row__cell.cell-names
-							p
+							a(href="#")
 								|Шащук Іван
 						.table-full__cell.row__cell.cell-status
 								.cell-status__left
@@ -311,6 +316,7 @@
 							p
 								|Поля
 						.table-full__cell.row__cell.cell-notes
+							input(type="text")
 				.table-full__wait.wait
 					.table-full__row
 						p.table-full__title
@@ -320,7 +326,7 @@
 						.table-full__placeholder.third
 					.table-full__row.f-container(data-count="1")
 						.table-full__cell.row__cell.cell-names
-							p
+							a(href="#")
 								|Іванчик Олександр
 						.table-full__cell.row__cell.cell-status
 							.cell-status__left
@@ -353,9 +359,10 @@
 							.cell-status__right
 						.table-full__cell.row__cell.cell-exp
 						.table-full__cell.row__cell.cell-notes
+							input(type="text")
 					.table-full__row.f-container(data-count="1")
 						.table-full__cell.row__cell.cell-names
-							p
+							a(href="#")
 								|Волтарніст Юлія
 						.table-full__cell.row__cell.cell-status
 							.cell-status__left
@@ -388,9 +395,10 @@
 							.cell-status__right
 						.table-full__cell.row__cell.cell-exp
 						.table-full__cell.row__cell.cell-notes
+							input(type="text")
 					.table-full__row.f-container(data-count="1")
 						.table-full__cell.row__cell.cell-names
-							p
+							a(href="#")
 								|Ситнік Оксана
 						.table-full__cell.row__cell.cell-status
 							.cell-status__left
@@ -423,6 +431,7 @@
 							.cell-status__right
 						.table-full__cell.row__cell.cell-exp
 						.table-full__cell.row__cell.cell-notes
+							input(type="text")
 				.table-full__department.department
 					.table-full__row
 						p.table-full__title
@@ -432,7 +441,7 @@
 						.table-full__placeholder.third
 					.table-full__row.f-container(data-count="2")
 						.table-full__cell.row__cell.cell-names
-							p
+							a(href="#")
 								|Коргун Максим
 						.table-full__cell.row__cell.cell-status
 							.cell-status__left
@@ -465,6 +474,7 @@
 							.cell-status__right
 						.table-full__cell.row__cell.cell-exp
 						.table-full__cell.row__cell.cell-notes
+							input(type="text")
 				.table-full__busy.busy
 					.table-full__row
 						p.table-full__title
@@ -474,7 +484,7 @@
 						.table-full__placeholder.third
 					.table-full__row.f-container(data-count="1")
 						.table-full__cell.row__cell.cell-names
-							p
+							a(href="#")
 								|Конончук Віталій
 						.table-full__cell.row__cell.cell-status
 							.cell-status__left
@@ -507,3 +517,4 @@
 							.cell-status__right
 						.table-full__cell.row__cell.cell-exp
 						.table-full__cell.row__cell.cell-notes
+							input(type="text")
