--- a/app/pug/layouts/work-popup/_feedback.pug
+++ b/app/pug/layouts/work-popup/_feedback.pug
@@ -17,7 +17,7 @@
 			span
 				|+ 
 			|добавить отзыв
-	.modal-row__layer
+	.modal-row__layer.feedback-row__layer
 		form.modal-row__feedback-row.add-feedback-form
 			.modal-row__feedback-speakers
 				i.modal-row__feedback-ico
