--- a/app/less/_modal.less
+++ b/app/less/_modal.less
@@ -391,15 +391,16 @@
     background: @secondary;
   }
   .sidebar__filter-item {
+
     &:last-child {
-      .sidebar__filter-wrapper {
-        &:hover {
-          p {
-            color: @delete;
+        .sidebar__filter-wrapper {
+           &:hover {
+            color: @white;
           }
         }
-        
-      }
+          p:hover {
+            color: @delete;
+          }
     }
 
     &.active {
@@ -681,7 +682,7 @@
 
  .feedback {
   .modal-row__layer {
-     max-height: 470px;
+     max-height: 490px;
      height: 100%;
   }
  }
@@ -971,7 +972,9 @@
     .sidebar__task-input {
       padding-left: 36px;
       padding-right:  36px;
-      padding-top: 4px;
+      padding-top: 8px;
+      padding-bottom: 6px;
+      line-height: 13px;
     }
 
     .delete-task-item {
