--- a/app/less/main.less
+++ b/app/less/main.less
@@ -351,6 +351,7 @@ main.main {
   // border: 1px solid @white;
   width: 26px;
   white-space: nowrap;
+  height: 20px;
 }
 
 span.negative {
@@ -401,7 +402,7 @@ i.label {
   font-weight: 500;
   background: @main-color;
   padding: 0px 7px;
-  height: 22px;
+  height: 20px;
   line-height: 22px;
   border-radius: 20px;
   display: flex;
@@ -692,7 +693,7 @@ i.label {
   overflow: visible;
   border-radius: 50%;
   span {
-    // display: inline-block;
+    display: inline-block;
     margin-top: 0.2em;
     line-height: 22px;
   }
