--- a/app/less/vacancy/_main-info.less
+++ b/app/less/vacancy/_main-info.less
@@ -216,7 +216,11 @@
 	display: flex;
 
 	.main-info__indicator {
-		line-height: 22px;
+		// line-height: 22px;
+		span {
+			margin-top: 0.1em;
+		}
+		
 		&:not(:last-child) {
 			margin-right: 16px;
 		}
