--- a/app/less/vacancy/_row.less
+++ b/app/less/vacancy/_row.less
@@ -102,6 +102,7 @@
 	overflow: visible;
 	span {
 		// line-height: 22px;
+		// margin-top: 0.25em;
 		display: inline-block;
 
 	}
@@ -112,6 +113,10 @@
 .row__full-info {
 	max-width: (1720 - 236)/1720 * 100%;
 	margin-left: auto;
+
+	.row__indicator {
+		margin-top: 0.25em;
+	}
 }
 
 .table-full {
