--- a/app/pug/layouts/_popup.pug
+++ b/app/pug/layouts/_popup.pug
@@ -232,7 +232,8 @@
 							+svg2('neg-feedback')
 						|Плохой отзыв
 				button.confirm-bnt
-					|OK
+					span
+						|OK
 		#choice-client-feedback-popup.work-modal-popup
 			form
 				.input-group
@@ -246,5 +247,6 @@
 					label(for="uamf-feedback-rbtn")
 						|УАМФ
 				button.confirm-bnt
-					|OK
+					span
+						|OK
 		include work-popup/_work-popup
