--- a/app/pug/layouts/vacancy/vacancy-popup/_demands.pug
+++ b/app/pug/layouts/vacancy/vacancy-popup/_demands.pug
@@ -8,22 +8,22 @@
 					p
 						|Кол-во клиентов
 					.input-group
-						input(type="text")
+						input.info-area(type="text")
 			.demands__men.info-block
 					p
 						|М
 					.input-group
-						input(type="text")
+						input.info-area(type="text")
 			.demands__women.info-block
 					p
 						|Ж
 					.input-group
-						input(type="text")
+						input.info-area(type="text")
 			.demands__languages.info-block
 					p
 						|Уровень владения языками
 					.input-group
-						input(type="text")
+						input.info-area(type="text")
 		.demands__bottom.bottom-areas
 			.demands__experiance.info-block
 					p
