--- a/app/pug/layouts/vacancy/vacancy-popup/_main-info.pug
+++ b/app/pug/layouts/vacancy/vacancy-popup/_main-info.pug
@@ -56,17 +56,23 @@
 					|Закрытые вакансии
 				.main-info__indicators
 					span.indicator.decline.main-info__indicator
-						|4
+						span
+							|4
 					span.indicator.choosen.main-info__indicator
-						|8
+						span
+							|8
 					span.indicator.ready.main-info__indicator
-						|5
+						span
+							|5
 					span.indicator.wait.main-info__indicator
-						|12
+						span
+							|12
 					span.indicator.department.main-info__indicator
-						|3
+						span
+							|3
 					span.indicator.busy.main-info__indicator
-						|2
+						span
+							|2
 	.modal-row__layer.main-info_right
 		.main-info__choose-block
 			.choose-employer
