--- a/app/pug/layouts/vacancy/vacancy-popup/_terms.pug
+++ b/app/pug/layouts/vacancy/vacancy-popup/_terms.pug
@@ -8,17 +8,17 @@
 				p
 					|Дата начала работы
 				.input-group
-					input(type="text")
+					input.info-area(type="text")
 			.terms__period.info-block
 				p
 					|Период (мес)
 				.input-group
-					input(type="text")
+					input.info-area(type="text")
 			.terms__salary.info-block
 				p
 					|Заработная плата
 				.input-group
-					input(type="text")
+					input.info-area(type="text")
 		.terms__middle
 			.terms__accommodation.info-block
 				p
