--- a/app/pug/layouts/work-popup/_feedback.pug
+++ b/app/pug/layouts/work-popup/_feedback.pug
@@ -23,7 +23,8 @@
 				i.modal-row__feedback-ico
 					+svg2('pos-feedback-white')
 				a.modal-row__feedback-choise
-					|Выбрать
+					span
+						|Выбрать
 				i.modal-row__feedback-direction.change-direction
 					+svg2('arrow-white')
 				p.modal-row__feedback-to
@@ -35,9 +36,11 @@
 			.modal-row__feedback-controls
 				.modal-row__feedback-controls_left
 					button.modal-row__feedback-cancel.feedback-btn
-						|Отменить
+						span
+							|Отменить
 					button.modal-row__feedback-save.feedback-btn
-						|Сохранить
+						span
+							|Сохранить
 				.modal-row__feedback-controls_right
 					button.modal-row__feedback-delete.delete-btn
 						|Удалить
