--- a/app/pug/layouts/work-popup/_work-popup.pug
+++ b/app/pug/layouts/work-popup/_work-popup.pug
@@ -226,6 +226,7 @@
 					.input-group
 						textarea.info-area(type="text" rows="12")
 			button.confirm-btn
-				|OK
+				span
+					|OK
 			button.delete-btn
 				|Удалить
