--- a/app/less/_modal.less
+++ b/app/less/_modal.less
@@ -737,7 +737,7 @@
   border-right: 1px solid @secondary;
   height: 100%;
   span {
-    margin-top: 0.2em;
+    margin-top: 0.1em;
   }
   i.label {
     &:not(:last-child) {
@@ -1058,6 +1058,13 @@
         color: @white;
         border-radius: 15px;
         padding: 4px 12px;
+        height: 22px;
+
+        span {
+          margin-top: 0.1em;
+          display: inline-block;
+
+        }
       }
 
      .modal-row__feedback-controls {
@@ -1066,6 +1073,11 @@
         justify-content: space-between;
         button {
           cursor: pointer;
+          height: 20px;
+          span {
+            // margin-top: 0.1em;
+            display: inline-block;
+          }
         }
      }
 
@@ -1261,8 +1273,8 @@
 .sidebar-select-modal__list, .common-info-select-modal__list, .contact-select-modal__list {
   // height: 26px;
   // display: flex;
-  padding-top: 3px;
-  padding-bottom: 3px;
+  padding-top: 4px;
+  padding-bottom: 2px;
  
 
   // align-items: center;
@@ -1322,6 +1334,12 @@
     cursor: pointer;
     border: 0;
     width: 100%;
+    height: 20px;
+
+    span {
+      display: inline-block;
+      margin-top: 0.1em;
+    }
   }
 
   .delete-btn {
@@ -1407,6 +1425,7 @@
       input {
         text-align: left;
         padding: 2px 7px;
+        padding-top: 4px;
         font-size: 1rem;
       }
     }
