--- a/app/less/_popup.less
+++ b/app/less/_popup.less
@@ -116,6 +116,12 @@
         cursor: pointer;
         border: 0;
         width: 100%;
+        height: 20px;
+
+        span {
+            display: inline-block;
+            margin-top: 0.2em;
+        }
     }
 
     .input-group {
@@ -147,7 +153,7 @@
     input[type='text'] {
         border-radius: 3px;
         text-align: left;
-        padding: 3px 7px;
+        // padding: 3px 7px;
     }
     .vacancy-modal__title {
         padding-left: 0;
@@ -158,7 +164,11 @@
         height: 20px;
         border-radius: 3px;
         text-align: left;
-        padding: 2px 7px;
+
+        &:focus {
+            border-color: @secondary
+        }
+        // padding: 2px 7px;
     }
 
  
