--- a/app/less/vacancy/_terms.less
+++ b/app/less/vacancy/_terms.less
@@ -18,7 +18,7 @@
 	input {
 		height: 26px;
 		border-radius: 3px;
-		padding: 3px 7px;
+		// padding: 3px 7px;
 		text-align: left;
 		border: 1px solid transparent;
 		transition: border 0.2s linear;
